--- a/theme/1classic.html
+++ b/theme/1classic.html
@@ -568,7 +568,7 @@
             console.log(videos[i]);
             new DPlayer({
                 container: document.getElementById('video-a' + i),
-                screenshot: true,
+                screenshot: false,
                 video: {
                     url: videos[i]
                 }
