--- a/theme/1classic.html
+++ b/theme/1classic.html
@@ -15,6 +15,7 @@
 <!DOCTYPE html>
 <html lang="<!--constStr@language-->">
 <head>
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title><!--Title--></title>
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
